--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,13 +3,13 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
 
   <label for="user[username]">Username</label>
-  <input type="text" name="username">
+  <input type="text" name="user[username]" id="user[username]">
 
   <label for="user[email]">E-Mail</label>
-  <input type="email">
+  <input type="email" name="user[email]" id="user[email]">
 
   <label for="user[password]">Password</label>
-  <input type="password">
+  <input type="password" name="user[password]" id="user[email]">
 
   <input type="submit">
 </form>
