--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<!--
+
 <form action="/users" method="POST" accept-charset="UTF-8">
 
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
@@ -13,3 +15,17 @@
 
   <input type="submit">
 </form>
+
+-->
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag(:user_username, "Username:") %>
+  <%= text_field(:user, :username) %>
+
+  <%= label_tag(:user_email, "E-Mail:") %>
+  <%= email_field(:user, :email) %>
+
+  <%= label_tag(:user_password, "Password:") %>
+  <%= password_field(:user, :password) %>
+
+  <%= submit_tag("Submit") %>
+<% end %>
