--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,6 +17,8 @@
 </form>
 
 -->
+
+<!--
 <%= form_tag("/users", method: "post") do %>
   <%= label_tag(:user_username, "Username:") %>
   <%= text_field(:user, :username) %>
@@ -28,4 +30,19 @@
   <%= password_field(:user, :password) %>
 
   <%= submit_tag("Submit") %>
+<% end %>
+-->
+
+<%= form_with model: @user do |form| %>
+  <%= form.label :username, "Enter Your Username" %>
+  <%= form.text_field :username, placeholder: "Big Happy Cat" %>
+
+  <%= form.label :email, "E-Mail"%>
+  <%= form.email_field :email, placeholder: "email@example.com" %>
+
+  <%= form.label :password, "Password"%>
+  <%= form.password_field :password %>
+
+  <%= form.submit "Create user" %>
+
 <% end %>
